--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, css {
   margin: 0;
   padding: 0;
-  background-color: aliceblue;
+  background-color: rgb(227, 138, 49);
   text-align: center;
 }
 
